--- a/ApplicationBDO/Views/Shared/_Menu.cshtml
+++ b/ApplicationBDO/Views/Shared/_Menu.cshtml
@@ -4,26 +4,19 @@
         <span>
             <a href="javascript:void(0);" id="show-shortcut" data-action="toggleShortcut">
                 <span>@User.FullName() </span>
-                <i class="fa fa-angle-down"></i>
             </a>
         </span>
     </div>
     <nav>
         <ul>
-
-            <li class="@Html.RouteIf("index", "active", null, new List<string>() { "pass" })">
-                <a href="@Url.Action("Index", "Pass")"><i class="fa fa-lg fa-fw fa-search"></i> <span class="menu-item-parent">Odczyt</span></a>
+            <li class="@Html.RouteIf("Index", "active", "Transmitting")">
+                <a href="@Url.Action("Index", "Transmitting")"><i class="fa fa-lg fa-fw fa-arrow-circle-left"></i> <span class="menu-item-parent">Przekazujący</span></a>
             </li>
-            <li class="@Html.RouteIf("createtimepass", "active", "Pass")">
-                <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-credit-card"></i> <span class="menu-item-parent">Przewozy</span></a>
-                <ul>
-                    <li class="@Html.RouteIf("createtimepass", "active", "Pass")">
-                        <a href="@Url.Action("CreateTimePass", "Pass")"><i class="fa fa-lg fa-fw fa-clock-o"></i> <span class="menu-item-parent">Przewoźnik</span></a>
-                    </li>
-                    <li class="@Html.RouteIf("createnamelesspass", "active", "Pass")">
-                        <a href="@Url.Action("CreateNumberPass", "Pass")"><i class="fa fa-lg fa-fw fa-camera"></i> <span class="menu-item-parent">Odbiorca</span></a>
-                    </li>
-                </ul>
+            <li class="@Html.RouteIf("Index", "active", "Transport")">
+                <a href="@Url.Action("Index", "Transport")"><i class="fa fa-lg fa-fw fa-credit-card"></i> <span class="menu-item-parent">Transportujący</span></a>
+            </li>
+            <li class="@Html.RouteIf("Index", "active", "Registrans")">
+                <a href="@Url.Action("Index", "Registrans")"><i class="fa fa-lg fa-fw fa-camera"></i> <span class="menu-item-parent">Przejmujący</span></a>
             </li>
             <li>
                 <a href="@Url.Action("ChangePassword", "Manage")"> <i class="fa fa-lg fa-fw fa-edit"></i> <span class="menu-item-parent">Zmiana hasła</span></a>
