--- a/ApplicationBDO/Views/Shared/_Layout.cshtml
+++ b/ApplicationBDO/Views/Shared/_Layout.cshtml
@@ -15,10 +15,10 @@
 </head>
 
 <body class="smart-style-3">
-    @{ Html.RenderPartial("_Header", RenderSection("topright", false)); }
+    @{ Html.RenderPartialIf("_Header", Request.IsAuthenticated); }
     @{ Html.RenderPartialIf("_Menu", Request.IsAuthenticated); }
     <div id="main" role="main">
-        @*@{ Html.RenderPartialIf("_Ribbon", Request.IsAuthenticated); }*@
+        @{ Html.RenderPartialIf("_Ribbon", Request.IsAuthenticated); }
         @RenderBody()
     </div>
     @if (Request.IsAuthenticated)
