--- a/ApplicationBDO/Views/Transport/Create.cshtml
+++ b/ApplicationBDO/Views/Transport/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@using ApplicationBDO.App_Helpers
-@model ApplicationBDO.Models.ChangePasswordViewModel
+﻿@model ApplicationBDO.Models.TransportModels
+@using ApplicationBDO.App_Helpers
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Index";
 }
 
 <div id="content">
@@ -11,49 +11,53 @@
                 <div class="jarviswidget jarviswidget-color-orange2" id="wid-id-3" data-widget-editbutton="false" data-widget-custombutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-edit"></i> </span>
-                        <h2>Formularz zmiany hasła</h2>
+                        <h2>Dodaj transportującego</h2>
                     </header>
                     <div>
                         <div class="jarviswidget-editbox">
                         </div>
                         <div class="widget-body">
-                            @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "smart-form", role = "form" }))
+                            @using (Html.BeginForm("Create", "Transport", FormMethod.Post, new { id = "order-form", @class = "smart-form" }))
                             {
                                 @Html.AntiForgeryToken()
                                 @Html.ValidationBootstrap()
-                                if (ViewBag.Success)
-                                {
-                                    <text>Poprawnie zmieniono hasło</text>
-                                }
                                 <fieldset>
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <section class="col col-6">
                                         <div class="row">
                                             <label class="input">
-                                                <i class="icon-prepend fa fa-lock"></i>
-                                                @Html.EditorFor(model => model.OldPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Bieżące hasło" } })
+                                                <i class="icon-prepend fa fa-user"></i>
+                                                @Html.EditorFor(model => model.NIP, new { htmlAttributes = new { @class = "form-control", placeholder = "NIP" } })
                                             </label>
                                         </div>
                                     </section>
                                     <section class="col col-6">
                                         <div class="row">
                                             <label class="input">
-                                                <i class="icon-prepend fa fa-lock"></i>
-                                                @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Nowe hasło" } })
+                                                <i class="icon-prepend fa fa-user"></i>
+                                                @Html.EditorFor(model => model.NumerRejestrowy, new { htmlAttributes = new { @class = "form-control", placeholder = "Numer rejestrowy" } })
                                             </label>
                                         </div>
                                     </section>
                                     <section class="col col-6">
                                         <div class="row">
                                             <label class="input">
-                                                <i class="icon-prepend fa fa-lock"></i>
-                                                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Powtórz nowe hasło" } })
+                                                <i class="icon-prepend fa fa-user"></i>
+                                                @Html.EditorFor(model => model.Adres, new { htmlAttributes = new { @class = "form-control", placeholder = "Adres" } })
+                                            </label>
+                                        </div>
+                                    </section>
+                                    <section class="col col-6">
+                                        <div class="row">
+                                            <label class="input">
+                                                <i class="icon-prepend fa fa-user"></i>
+                                                @Html.EditorFor(model => model.Nazwa, new { htmlAttributes = new { @class = "form-control", placeholder = "Nazwa" } })
                                             </label>
                                         </div>
                                     </section>
                                 </fieldset>
                                 <footer>
-                                    <a href="@Url.Action("Index", "Pass")" , class="btn btn-primary"><i class="fa fa-arrow-left"></i> Powrót</a>
+                                    <a href="@Url.Action("Index", "Transport")" , class="btn btn-primary"><i class="fa fa-arrow-left"></i> Powrót</a>
                                     <button type="submit" class="btn btn-success">
                                         <i class="fa fa-check"></i> Zapisz
                                     </button>
