--- a/ApplicationBDO/Views/CompanyLoad/IndexLoadApiToFile.cshtml
+++ b/ApplicationBDO/Views/CompanyLoad/IndexLoadApiToFile.cshtml
@@ -11,7 +11,7 @@
                 <div class="jarviswidget jarviswidget-color-orange2" id="wid-id-1" data-widget-editbutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                        <a href="@Url.Action("GetLoadToFile", "Company")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Dodaj"><i class="fa fa-plus"></i> Wczytaj dane</a>
+                        <a href="@Url.Action("GetLoadApiToFile", "CompanyLoad")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Dodaj"><i class="fa fa-plus"></i> Wczytaj dane</a>
                     </header>
                     <div>
                         <div class="jarviswidget-editbox">
