--- a/ApplicationBDO/Views/CompanySQL/IndexFileToSQL.cshtml
+++ b/ApplicationBDO/Views/CompanySQL/IndexFileToSQL.cshtml
@@ -11,7 +11,9 @@
                 <div class="jarviswidget jarviswidget-color-orange2" id="wid-id-1" data-widget-editbutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                        <a href="@Url.Action("GetLoadApiToFile", "Company")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Dodaj"><i class="fa fa-plus"></i> Wczytaj dane</a>
+                        <a href="@Url.Action("InsertFileToSql", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Dodaj"><i class="fa fa-plus"></i> INSERT </a>
+                        <a href="@Url.Action("SelectFileToSql", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Dodaj"><i class="fa fa-plus"></i> SELECT </a>
+                        <a href="@Url.Action("UpdateFileToSql", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Dodaj"><i class="fa fa-plus"></i> UPDATE </a>
                     </header>
                     <div>
                         <div class="jarviswidget-editbox">
