--- a/ApplicationBDO/Views/CompanySQL/Index.cshtml
+++ b/ApplicationBDO/Views/CompanySQL/Index.cshtml
@@ -11,9 +11,10 @@
                 <div class="jarviswidget jarviswidget-color-orange2" id="wid-id-1" data-widget-editbutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                        <a href="@Url.Action("InsertFileToNoSql", "CompanyNoSQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Insert"><i class="fa fa-plus"></i> INSERT </a>
-                        <a href="@Url.Action("SelectFileToNoSql", "CompanyNoSQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Select"><i class="fa fa-plus"></i> SELECT </a>
-                        <a href="@Url.Action("UpdateFileToNoSql", "CompanyNoSQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Update"><i class="fa fa-plus"></i> UPDATE </a>
+                        <a href="@Url.Action("Delete", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Delete"><i class="fa fa-plus"></i> DELETE </a>
+                        <a href="@Url.Action("Update", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Update"><i class="fa fa-plus"></i> UPDATE </a>
+                        <a href="@Url.Action("Select", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Select"><i class="fa fa-plus"></i> SELECT </a>
+                        <a href="@Url.Action("Insert", "CompanySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Insert"><i class="fa fa-plus"></i> INSERT </a>
                     </header>
                     <div>
                         <div class="jarviswidget-editbox">
