--- a/ApplicationBDO/Views/Shared/_Menu.cshtml
+++ b/ApplicationBDO/Views/Shared/_Menu.cshtml
@@ -14,18 +14,26 @@
                 <a href="@Url.Action("Index", "CompanyLoad")"><i class="fa fa-lg fa-fw fa-briefcase"></i> <span class="menu-item-parent">Load api to file</span></a>
             </li>
             <li>
-                <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-user"></i> <span class="menu-item-parent">Company SQL</span></a>
-                <ul style="@Html.MenuChildOpenIf("CompanySQL")">
+                <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-user"></i> <span class="menu-item-parent">Sql-MSSQLExpress</span></a>
+                <ul style="@Html.MenuChildOpenIf("CompanySQLMSSQLExpress")">
                     <li>
-                        <a href="@Url.Action("Index", "CompanySQL")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file to Sql</span></a>
+                        <a href="@Url.Action("Index", "CompanySQLMSSQLExpress")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-users"></i> <span class="menu-item-parent">Company NoSQL</span></a>
-                <ul style="@Html.MenuChildOpenIf("CompanyNoSQL")">
+                <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-users"></i> <span class="menu-item-parent">NoSql-MongoDB</span></a>
+                <ul style="@Html.MenuChildOpenIf("CompanyNoSQLMongoDB")">
                     <li>
-                        <a href="@Url.Action("Index", "CompanyNoSQL")"><i class="fa fa-lg fa-fw fa-file-code-o"></i> <span class="menu-item-parent">Load file to NoSql</span></a>
+                        <a href="@Url.Action("Index", "CompanyNoSQLMongoDB")"><i class="fa fa-lg fa-fw fa-file-code-o"></i> <span class="menu-item-parent">Load file</span></a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-users"></i> <span class="menu-item-parent">NoSql-RavenDB</span></a>
+                <ul style="@Html.MenuChildOpenIf("CompanyNoSQLRavenDB")">
+                    <li>
+                        <a href="@Url.Action("Index", "CompanyNoSQLRavenDB")"><i class="fa fa-lg fa-fw fa-file-code-o"></i> <span class="menu-item-parent">Load file</span></a>
                     </li>
                 </ul>
             </li>
